Fixed: The README.html file is no longer copied on site (OFBIZ-12758)
The warning below was (hopefully) preventing to generate the HTML files
2023-02-14T16:10:20.983Z [main] WARN FilenoUtil :
Native subprocess control requires open access to the JDK IO subsystem
Pass '--add-opens java.base/sun.nio.ch=ALL-UNNAMED
--add-opens java.base/java.io=ALL-UNNAMED' to enable.

Let's see how it goes on BB...