@@ -590,6 +590,10 @@ task createTenant(group: ofbizServer, description: 'Create a new tenant in your 
 
 // ========== Documentation tasks ==========
 tasks.withType(AsciidoctorTask) { task ->
+    inProcess = JAVA_EXEC
+        forkOptions {
+            jvmArgs("--add-opens","java.base/sun.nio.ch=ALL-UNNAMED","--add-opens","java.base/java.io=ALL-UNNAMED")
+        }
     outputOptions {
         // I hate we have to do this - but JRuby (asciidoctorj-pdf) and Windows don't mix well
         if (System.properties['os.name'].toLowerCase().contains('windows')) {
